crates/pensum/tests/snapshots/contract__add_mints_the_register.snap
---
source: crates/pensum/tests/contract.rs
assertion_line: 142
expression: pretty(&value)
---
{
  "core": "pensum",
  "data": {},
  "home": "acm",
  "key": "reach_out_to_alex",
  "kind": "task",
  "refs": [
    "album:alex"
  ]
}
