crates/pensum/tests/snapshots/contract__on_disk_register.snap
---
source: crates/pensum/tests/contract.rs
assertion_line: 389
expression: text
---
{"key":"reach_out_to_alex","refs":["album:alex"],"data":{}}
{"key":"buy_milk","refs":[],"data":{"done":"20260719","note":"the 2% one"}}
