crates/pensum/tests/snapshots/contract__rename_cascades.snap
---
source: crates/pensum/tests/contract.rs
assertion_line: 205
expression: pretty(&value)
---
{
  "cascade": [
    {
      "path": "a_actio/a_o_opus/ao__/ao__task.jsonl",
      "refs": 1
    }
  ],
  "record": {
    "core": "pensum",
    "home": "acm",
    "key": "ring_alex",
    "kind": "task"
  },
  "renamed": {
    "from": "reach_out_to_alex",
    "to": "ring_alex"
  }
}
